--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -50,6 +50,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
