--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "esbuild-register": "^3.6.0",
     "express": "^4.18.2",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/qrcode": "^1.5.6",
     "@types/socket.io": "^3.0.2",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
