--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
     "esbuild-register": "^3.6.0",
     "express": "^4.18.2",
     "qrcode": "^1.5.4",
+    "redis": "^5.9.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
