chore: clean up .env variables and add .env.example

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,7 +1,5 @@
 PORT=3001
-ABLY_API_KEY=your-ably-api-key
-
-# Backend Configuration
-BACKEND_URL=http://localhost:8000
-DOCK_ID=1
-DOCK_SECRET=your-dock-secret
+BACKEND_URL=https://go-electrify-backend-main.onrender.com
+ABLY_API_KEY=your_ably_api_key_here
+DOCK_ID=your_dock_id_here
+DOCK_SECRET=your_dock_secret_here
