--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "echo 'ESLint config built'"
+  },
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
