--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,9 +6,11 @@
     "./*": "./src/*.tsx"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+  "build": "tsc --noEmit",
+  "check-types": "tsc --noEmit",
+  "lint": "eslint . --max-warnings 0",
+    "lint:fix": "eslint . --fix",
+    "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
