--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "esbuild-register": "^3.6.0",
     "express": "^4.18.2",
+    "axios": "^1.6.8",
     "qrcode": "^1.5.4",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1"
